testing  2023-10-09-milestone 1.md

--- a/_posts/2023-10-09-milestone 1.md
+++ b/_posts/2023-10-09-milestone 1.md
@@ -150,4 +150,12 @@ Real-time performance analysis enables a detailed examination of both team and p
 - **Faceoff Win Rate:** Calculated as the number of faceoffs won divided by the total number of faceoffs that have occurred, this metric provides insight into a team's control over puck possession.
 
 ## 4. Simple Visualizations
+### Question 1. Comparing the shot types over all the teams.
+```python
+df['season'] = df.gameId.apply(lambda x: str(x)[0:4])
+```
+In order to visualise only the seasons we are interested in, we first filter out all other seasons. In this code, you are essentially creating a new column, 'season', in your DataFrame df. The values in this column are derived from the 'gameId' column by extracting the first four characters, assuming that these characters represent the season information. For example, if a 'gameId' is '2017020235', the corresponding 'season' value would be '2017'. This operation allows you to easily categorize and analyze your data based on seasons, providing a valuable additional dimension for your analysis. 
+
+So having done that we just wanna know the distribution of shots and goals in season 2017 just to have a general overview of the graph. We plotted bar graph so that it explains count of all type of events in a more easy way to convey the distribution of shot types across teams in the specified season, enabling your audience to quickly grasp and understand the key insights from the data.
+
 ## 5. Advanced Visualizations: Shot Maps
