--- a/_posts/2023-10-09-milestone 1.md
+++ b/_posts/2023-10-09-milestone 1.md
@@ -32,7 +32,7 @@ The file `data_downloader.py` contains the class `DataDownloader()` which is res
 A major feature of the Downloader class is that it can be used to download the data in parallel. This is achieved by using the `threading` module.
 
 ## 2. Interactive Debugging Tool
-![Alt text](/assets/interactive-tool.png)
+![Alt text]({{ site.baseurl }}/assets/interactive-tool.png)
 
 The screenshot displays some information about a specific game and an event within it, all of which can be dynamically configured using four interactive widgets. Below is the implementation of the tool.
 
@@ -140,7 +140,7 @@ display(interactive_plot)
 ### 3.1. A small snippet of your final dataframe
 First 10 rows of tidied dataframe:
 
-![Alt text](/assets/tidied-df.png)
+![Alt text]({{ site.baseurl }}/assets/tidied-df.png)
 ### 3.2. Adding the actual strength information to both shots and goal
 Assuming penalty events are provided with a start time \(X\), duration \(T\), and the penalized team \(A\), any events occurring within the time frame \(X + T\) will see team \(A\) with a reduced player count by at least one, compared to the last event before time \(X\). This principle also applies to the opposing team. We will maintain a record of the number of players on each team from the start of the game (typically 5-5) until its conclusion. Consequently, we can deduce the on-ice strength during shots and goals within the time frame \(X + T\) based on the team executing the event.
 ### 3.3. Additional features
@@ -150,7 +150,7 @@ Real-time performance analysis enables a detailed examination of both team and p
 - **Faceoff Win Rate:** Calculated as the number of faceoffs won divided by the total number of faceoffs that have occurred, this metric provides insight into a team's control over puck possession.
 
 ## 4. Simple Visualizations
-### Question 1. Comparing the shot types over all the teams.
+### 4.1 Comparing the shot types over all the teams.
 ```python
 df['season'] = df.gameId.apply(lambda x: str(x)[0:4])
 ```
@@ -168,7 +168,7 @@ plt.ylabel('Count')
 plt.title('Distribution of Shot Types across Teams in season 2017-2018')
 plt.show()
 ```
-![Alt text](/assets/shot_types.png)
+![Alt text]({{ site.baseurl }}/assets/shot_types.png)
 
 As seen in the graph, the most common type of shot is the "wrist shot" which has a count value of 46,520.
 
@@ -189,7 +189,7 @@ plt.ylabel('Count')
 plt.title('Distribution of missed Shots in season 2017-2018')
 plt.show()
 ```
-![Alt text](/assets/missed_shots.png)
+![Alt text]({{ site.baseurl }}/assets/missed_shots.png)
 
 This plot gives us the distribution of missed shots accross all the teams in season 2017-2018
 
@@ -204,7 +204,7 @@ plt.ylabel('Count')
 plt.title('Distribution of goals scored in season 2017-2018')
 plt.show()
 ```
-![Alt text](/assets/goals_scored.png)
+![Alt text]({{ site.baseurl }}/assets/goals_scored.png)
 
 This plot gives us the distribution of goals scored accross all the teams in season 2017-2018
 
@@ -220,7 +220,7 @@ plt.title("Distribution of Shot Types and Goals across Teams in season 2017-2018
 plt.legend()
 plt.show()
 ```
-![Alt text](/assets/shots_and_goals.png)
+![Alt text]({{ site.baseurl }}/assets/shots_and_goals.png)
 To answer which type of shot is the most dangerous we use goals to shot ratio. 
 ```python
 goal_to_shot_ratio = goal_counts / shot_counts
@@ -231,10 +231,10 @@ plt.xlabel('Shot Types')
 plt.ylabel('Goal-to-Shot Ratio')
 plt.title('Goal-to-Shot Ratio for Each Shot Type in season 2017-2018')
 ```
-![Alt text](/assets/goal_to_shot_ratio.png)
+![Alt text]({{ site.baseurl }}/assets/goal_to_shot_ratio.png)
 As shown in the bar graph the most dangerous type of shot is the "Deflected" shot type. 
 
-### Question 2. relationship between the distance a shot was taken and the chance it was a goal
+### 4.2 relationship between the distance a shot was taken and the chance it was a goal
 
 This snippit of code displays the filtering, processing, and binning shot data.
 
@@ -298,7 +298,7 @@ df_20_21_processed = process_distance_bins(df_20_21_processed, distance_bins, "D
 To kick things off, we begin by filtering our dataset based on seasons. The filter_by_season function allows us to segment the data into three distinct seasons: 2018-2019, 2019-2020, and 2020-2021. Next, we explore the absolute values of the x-coordinates of shots. The abs function is applied to each season's DataFrame, creating a new column named "x_values" representing the absolute x-coordinate. Taking our analysis a step further, we calculate the distance from each shot to the goal using the Euclidean distance formula. The process_season_df function enriches our DataFrame with a new column, "Distance_from_shot_to_goal." To facilitate a comprehensive analysis, we categorize the distances into bins. The process_distance_bins function bins the distances into 10-yard intervals, creating a new column named "distance_bin."
 
 Our processed dataframe would look like this. 
-![Alt text](/assets/processed_dataframe.png)
+![Alt text]({{ site.baseurl }}/assets/processed_dataframe.png)
 
 
 At the heart of our analysis is the calculate_percentage_goals function.
@@ -339,7 +339,7 @@ plt.grid()
 
 plt.show()
 ```
-![Alt text](/assets/season_2020_2021.png)
+![Alt text]({{ site.baseurl }}/assets/season_2020_2021.png)
 
 Season 2019-2020
 ```python
@@ -364,7 +364,7 @@ plt.grid()
 
 plt.show()
 ```
-![Alt text](/assets/season_2019_2020.png)
+![Alt text]({{ site.baseurl }}/assets/season_2019_2020.png)
 
 Season 2018-2019
 ```python
@@ -388,7 +388,7 @@ plt.grid()
 
 plt.show()
 ```
-![Alt text](/assets/season_2018_2019.png)
+![Alt text]({{ site.baseurl }}/assets/season_2018_2019.png)
 
 The graph's structure is unchanged, as you can see, although the percentage of goals scored between [80-90] yards increased somewhat in the 2020–2021 season compared to the previous two. Since we have information about the three seasons, there won't be any appreciable variations in the relationship between shot distance and shot taken. Since play styles may change over time and rules and developments may have an impact on the relationship between the distance and the type of shot taken, perhaps there would be a significant difference if we had more than 50 years.  
 
@@ -405,7 +405,7 @@ The heart of our analysis lies in two key variables: shot_counts and goal_counts
 
 The dataframe would look like this.
 
-![Alt text](/assets/dataframe_q3.png)
+![Alt text]({{ site.baseurl }}/assets/dataframe_q3.png)
 
 Using this information we plot the heatmap for the season 2018-2019.
 
@@ -421,7 +421,7 @@ heatmap.set_xticklabels(new_tick_labels, rotation=0)
 
 plt.show()
 ```
-![Alt text](/assets/observation.png)
+![Alt text]({{ site.baseurl }}/assets/observation.png)
 
 Observation from the heatmap.
 
