add: fe2 more features

--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -23,6 +23,9 @@ In the dataset we're working with, each feature provides unique and insightful d
 - `shot_type`: The type of shot taken (e.g., slap shot, wrist shot).
 - `empty_net`: Indicates whether the goal was empty when the shot was taken.
 - `strength`: The strength of the team during the event (e.g., even strength, power play).
+- `power_play_elapsed_time`: This feature tracks the time elapsed during a team's power play. It resets to zero once the power play ends.
+- `friendly_non_goalie_skater`: This feature counts the number of skaters, excluding goalies, for the team currently in control of the puck.
+- `opposing_non_goalie_skater`: This feature tallies the number of skaters, excluding goalies, for the team without the puck.
 - `attacking_side`: The side of the rink is being targeted in the event.
 - `net_x`: The x-coordinate of the net being targeted.
 - `net_distance`: The distance of the shooter from the net when the shot was taken.
