Update Blog for M2

--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -199,54 +199,35 @@ The curves for cumulative goals and goals rate are similar, but the model nows p
 Interestingly, without feature selection, the XGBoost model performed very well with an AUC-ROC of 76% and a calibration plot that was almost perfect. The problem might be due to overfitting, but since we used a validation set, it will be interesting to see the results on the test set.
 Finally, looking at the calibration plot, we can see that the XGBoost is now very precise until around 50% of predicted probability, but after that the model is not able to be confident enough in its prediction, which might be due to loss of relevant informations.
 
+## 6. Best Shot
+In this part of the project, we tried playing with the Feature Engineering part coupled with New Algorithms to see if we can improve the performance of the model. 
+
+### Various Feature Engineering Techniques and Classification Algorithms
+We first used `Lable Encoders` for the Categorical features in this complied with the `StandardScaler` to scale thing normally. Moreover, instead of removing the whole rows of the Data with some missing values, we tried to populate it with the use of `Interpolation`. This significantly increased our accuracy on the simplest Classification Alogrithms like `Decision Tree` and `Random Forest`. We also tried to use the `Squential Model(Neural Nets)` to check if there is any specific advantages.
+
+Here are some Graphs for the `Decision Tree`, `Random Forest` and `Sequential Model` to demonstrate the performance of the model.:
+
+{% include image.html file="assets/milestone2/Q6/DecisionTreeClassifier_crossval.png" description="Decision Tree Classifier with Cross Validation" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/7e843164d68946fc931ced023b7cfb3a"%}
+{% include image.html file="assets/milestone2/Q6/RandomForestClassifier_crossval.png" description="Random Forest Classifier with Cross Validation" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/f86c5b49c3ff421897557310e70d244a"%}
+{% include image.html file="assets/milestone2/Q6/Sequential_crossval.png" description="Sequential Model with Cross Validation" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/a8a54b064f574f65bbcd900c0f3cea94" %} 
+{% include image.html file="assets/milestone2/Q6/Sequential.png" description="Sequential Model" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/5122b6ca597c442184df08275413eb28"%} 
+{% include image.html file="assets/milestone2/Q6/DecisionTreeClassifier.png" description="Decision Tree Model" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/777011c16e4c409ba01d33937dee122b"%} 
+{% include image.html file="assets/milestone2/Q6/RandomForestClassifier.png" description="Random Forest Model" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/b141675da7aa45708739e8b7c574ab0b"%} 
+{% include image.html file="assets/milestone2/Q6/KNeighborsClassifier_crossval.png" description="KNN Model" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/eba86003fd754109b301ca81916a4278" %} 
+{% include image.html file="assets/milestone2/Q6/KNeighborsClassifier.png" description="KNN Model with Cross Validation" link="https://www.comet.com/duyhung2201/ift-6758-b03-project/af638d7fdb16479e89f19cd02c83c755" %} 
+
+We can see the KNN Model performed the least when comapred to other models. The Decision Tree and Random Forest and Sequential Model performed fairly equally but considering the Simplicity of the **Decision Tree** we choose it to be our **best model**.
+
+
 ## 7. Evaluate on test set
 
-### Logistic Regression Models on Regular Dataset
+### Comparision of Models on Regular and Playoff Dataset
+ 
+{% include image_nl.html file="assets/milestone2/Question7/regular.png" description="Comparision of Models on Regular Dataset" %}
+{% include image_nl.html file="assets/milestone2/Question7/playoffs.png" description="Comparision of Models on Playoff Dataset" %}
 
-![Alt text](../assets/milestone2/Question7/Regular_net_distance.png)
+As seen from the above graphs most of the models performed similar to the validation set.
 
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/addcd095d483415bbf9f9d721fec6a9d?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
+The ROC curve remains consistent for the Regular and Playoff dataset. This shows that the model is able to discriminate between the positive and negative instances noramlly.
 
-![Alt text](../assets/milestone2/Question7/regular_shot_angle.png)
-
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/d29190c6a8844b1a912709145ffa225c?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
-
-![Alt text](../assets/milestone2/Question7/regular_angle_distance.png)
-
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/769a8821c5964d68ab7797b02e7bbc63?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
-
-As seen from the above graphs these 3 Logistic Regression Models performed similar to the validation set.
-
-The ROC curve for the net_disance on the regular test set is 0.69 which is similar to the validation set. The goal rate has a very minute differnece in the regular test set as the highest predicted probability starts around 25% of goal rate whereas in the validation set it was almost close to 30% but both of the  set follows the same trend of decreasing as the percentile decreases. The cumulative proportion of goals and reliability diagram is exactly the same.   
-
-As for the shot_angle, there isnt any difference between the AUC score, goal rate, cumulative proportion of goals and reliability diagram. The performance on these graphs are not good in both the validation and regular test set.
-
-finally for the shot_angle and net_distance we can can see that the graphs are similar to the net_distance.This was the case for the validation set as well showing that the shot_angle does not have much importance.  
-
-There isn't any drastic change in the graph except for some slight movement in the goal rate of net_distance. The models were expected to behave the same on test set as on the validation set since these logistic regression models are simple as they use only 1 to max 2 features to predict the outcome. We want the models have similaer performance on validation and test set since we would like the model to generalise better on the unseen data
-
-### Logistic Regression on Playoff Dataset
-
-![Alt text](../assets/milestone2/Question7/playoff_net_distance.png)
-
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/0b45540a22bd485b8d90883459f90474?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
-
-![Alt text](../assets/milestone2/Question7/playoff_shot_angle.png)
-
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/bf4915a545934bb1b66667759d9442a8?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
-
-![Alt text](../assets/milestone2/Question7/playoff_angle_distance.png)
-
-[link](https://www.comet.com/duyhung2201/ift-6758-b03-project/61f6f8d8a97449dd932df948267447fd?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
-
-As seen from the above graphs these 3 Logistic regression follows a similar trend as to the validation set and regulart test set. 
-
-The ROC curve for net_distance is 0.68 which has slightly decreased when compared to the validation set and test set. The  goal rate for the playoff test set starts from 20% for the highest predicted probability then slightly decreases and goes up again and then has a gradual decrease as the model percentile decreases. This type of trend in goal rate is different than of the previous test set and validation set. The reliability diagram is also differnt since the the classifier jumps below the "Perfectly Calibrated" line at the point close to 0.2.
-
-As for the shot__angle the graph is very similar to the other test case and the validation set. The goal rate has a slightly different trend as it starts from 0% of goal rate and has a steady line as the percentile increases. 
-
-For the shot_angle and net_distance is very similar to the graph of net_distance. This was the case for the validation set and regular test set. 
-
-Overall these graphs shows a similar trend to the validation set except for some slight changes in AUC score and goal rate. 
-
-
+So, conclusivly we can say that the model is generalizable well on the test set, since the performance is similar to the validation set and the ROC curve is consistent for both the datasets. Though an clear exception to the Reliability Curve is the XGBoost model which is not able to predict the probability of the goal properly on the Regualr Dataset but does fine on Playoff Dataset. 
