Fix typos and mistake fe1

--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -7,12 +7,12 @@ The shots are consistently more frequent around the offensive zone and the goals
 ### A histogram of shot counts binned by angle
 ![Alt text](../assets/milestone2/question2/shot-by-angle-hist.png)
 
-The distribution appears to be symmetric around the 0 degrees angle. There are prominent peaks near the center, which correspond to shots taken from directly in front of the net. The high number of shots and goals in this area suggests that straight-on shots are more common and successful.
+The distribution appears to be symmetric around the 0-degree angle. There are prominent peaks near the center, which correspond to shots taken directly in front of the net. The high number of shots and goals in this area suggests that straight-on shots are more common and successful.
 
 ### A 2D histogram where one axis is the distance and the other is the angle.
 ![Alt text](../assets/milestone2/question2/join-plot-hist.png)
 
-There is a sparse distribution of shots at greater distances, indicating that shots are less frequently taken from far away. As the distance from the net increases, the spread of angles from which shots are taken appears to decrease. This suggests that long-distance shots are less likely to be taken from wide angle.
+There is a sparse distribution of shots at greater distances, indicating that shots are less frequently taken from far away. As the distance from the net increases, the spread of angles from which shots are taken appears to decrease. This suggests that long-distance shots are less likely to be taken from wide angles.
 
 ### A histogram of average goal rate vs distance bins
 ![Alt text](../assets/milestone2/question2/Goal_rate_vs_distance.png)
@@ -27,13 +27,13 @@ The goal rate seems to follow a similar trend that of the shot counts with the h
 
 ### A histogram of goals count binned by distance.
 ![Alt text](../assets/milestone2/question2/goals_hist.png)
-A significant majority of goals are scored from a close distance. There are very few goals scored on an empty net. They are spread out over a range of distances, including some from very long range. The non-empty net goals are rarely scored from distances beyond 75 feet, underscoring the difficulty of scoring long-range goals with the presence of goalie.
+The majority of goals are scored from a close distance. There are very few goals scored on an empty net. They are spread out over a range of distances, including some from very long ranges. The non-empty net goals are rarely scored from distances beyond 75 feet, underscoring the difficulty of scoring long-range goals with the presence of a goalie.
 
-Regarding to the domain knowledge: “it is incredibly rare to score a non-empty net goal on the opposing team from within your defensive zone”, a histogram of goals from teams'defensive zone is created as below.
+Regarding the domain knowledge: “it is incredibly rare to score a non-empty net goal on the opposing team from within your defensive zone”, a histogram of goals from team's defensive zone is created as below.
 
 ![Alt text](../assets/milestone2/question2/goal_defensive_zone_hist.png)
 
-The histogram reveals that scoring a non-empty-net goal on the opposing team from the team's defensive zone is indeed a rare event. The distribution suggests that these occurrences are relatively random and are not heavily influenced by the distance from the goal. Additionally, it's noted that some goal data may be recorded incorrectly, with one example is the first goal of game 2018020722 at 04:39, 1st period. The x/y coordinates has been recorded incorrectly to -85 and -22 respectively. For verification and context, game highlights are available through the provided [link](https://www.nhl.com/gamecenter/bos-vs-phi/2019/01/16/2018020722/playbyplay). This could explain why for certain bin distances, there are even more goals with a non-empty net than with an empty net. 
+The histogram reveals that scoring a non-empty-net goal on the opposing team from the team's defensive zone is indeed a rare event. The distribution suggests that these occurrences are relatively random and are not heavily influenced by the distance from the goal. Additionally, it's noted that some goal data may be recorded incorrectly, with one example is the first goal of game 2018020722 at 04:39, 1st period. The x/y coordinates have been recorded incorrectly to -85 and -22 respectively. For verification and context, game highlights are available through the provided [link](https://www.nhl.com/gamecenter/bos-vs-phi/2019/01/16/2018020722/playbyplay). This could explain why for certain bin distances, there are even more goals with a non-empty net than with an empty net. 
 
 ## 3. BaseLine Models
 
