--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -1,3 +1,5 @@
+Project demo at: https://youtu.be/Lqi4OQlnkHQ
+
 ## 2. Feature engineering I
 ### A histogram of shot counts binned by distance
 ![Alt text](../assets/milestone2/question2/shot-by-distance-hist.png)
