--- a/_posts/2023-10-09-milestone 1.md
+++ b/_posts/2023-10-09-milestone 1.md
@@ -1,4 +1,5 @@
 Project demo at: https://youtu.be/Lqi4OQlnkHQ
+Live at: https://hockey-prediction.streamlit.app
 
 ## 1. Data Acquisition 
 The data acquisition process is one of the most important and initial steps of any data science pipeline. The data acquisition process for this project is as follows:
